working data retreival to frontend